[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = dcimg
description = Astropy affiliated package
long_description = This is a package for reading Hamamatsu DCIMG files that relies on astropy
author = Stuart Littlefair
author_email = s.littlefair@sheffield.ac.uk
license = BSD
url = http://astropy.org/
edit_on_github = True
github_project = StuartLittlefair/dcimg

[entry_points]
astropy-package-template-example = dcimg:main